# newFirmware

./: How to backup.txt  README.md
APP - template/: CMakeLists.txt  sdkconfig.defaults
APP - template/components/app_api/include/: app_api.h  app_manifest.h  flow_config.h  nvs_proxy.h
APP - template/main/: CMakeLists.txt  idf_component.yml  main.c
